refactor: clean up compiler warnings and legacy map paths, bump to 1.4.56.