@@ -6,14 +6,11 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URL;
 import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -83,8 +80,7 @@ public class EdsmClient {
         String body = "";
 
         try {
-            URL url = new URL(urlString);
-            conn = (HttpURLConnection) url.openConnection();
+            conn = (HttpURLConnection) URI.create(urlString).toURL().openConnection();
 
             conn.setRequestMethod("GET");
             conn.setConnectTimeout(10_000);
